test/ingress/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-https-test
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:                                     #为后端主机设置TLS
  - hosts:
    - https.test.com                     #后端主机名
    secretName: nginx-test-tls           #证书名称，即Secret
  rules:
  - host: https.test.com
    http:
      paths:
      - path:                            #路径为空，即根
        backend:
          serviceName: nginx-svc
          servicePort: 80
