test/ingress/ratel-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ratel
  namespace: kube-system
spec:
  rules:
  - host: ratel.k8s.dashboard.com
    http:
      paths:
      - backend:
          serviceName: ratel
          servicePort: 8888
        path: /
